# finestra

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
cargo-finestra/: Cargo.toml
cargo-finestra/src/: main.rs
finestra/: Cargo.toml  build.rs
finestra/examples/: button.rs  calculator.rs  checkbox.rs  cursor.rs  dialog.rs  disco_button.rs  hello.rs  image.rs  menu.rs  stack.rs  text_field.rs  text_field_as_window_title.rs  theme.rs  timer.rs  tooltip.rs
finestra/src/: event.rs  lib.rs  main.rs  state.rs
finestra/src/app/: context.rs  mod.rs  platform.rs
finestra/src/error/: mod.rs  window.rs
finestra/src/layout/: constraints.rs  mod.rs
finestra/src/platform/: mod.rs
finestra/src/platform/macos/: app.rs  cacao_delegates.rs  dynamic_wrapper.rs  extensions.rs  menu.rs  mod.rs  nsalert.rs  nsstackview.rs  resources.rs  state.rs  window.rs
finestra/src/platform/macos/appkit/: menu.rs  mod.rs  nstimer.rs
finestra/src/platform/macos/core_animation/: layer.rs  mod.rs
finestra/src/platform/macos/objc/: mod.rs  nstimer.rs
finestra/src/platform/macos/views/: mod.rs  nsalert.rs  nsstackview.rs
finestra/src/platform/macos/xctest/: mod.rs  xcuiapplication.rs  xcuiapplicationstate.rs
finestra/src/platform/win32/: debug.rs  dialog.rs  dispatch.rs  mod.rs  view.rs  window.rs  wrapper.rs
finestra/src/property/: mod.rs  text_alignment.rs  theme.rs
finestra/src/resources/: color.rs  cursor.rs  image.rs  menu.rs  mod.rs  timer.rs
finestra/src/test/: application.rs  macos.rs  mod.rs  stub.rs
finestra/src/views/: base.rs  button.rs  checkbox.rs  image.rs  label.rs  mod.rs  stack.rs  text_block.rs  text_field.rs
finestra/src/window/: config.rs  dialog.rs  mod.rs
showcase/: Cargo.toml  Info.plist  build.sh
showcase/src/: main.rs
tools/: verify-cross-platform.sh
