[workspace]
resolver = "2"
members = [
    "cargo-finestra",
    "finestra",
    "showcase",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/usadson/finestra/"
version = "0.3.0"
authors = ["Tristan Gerritsen"]
license = "Apache-2.0"
license-file = "COPYING"
description = "Cross Platform Native UI Framework"

[profile.release-tiny]
inherits = "release"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
