[package]
name = "finestra"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
euclid = "0.22"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.3", features = ["appkit"] }
