[package]
name = "finestra"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
dashmap = "5"
euclid = "0.22"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.3", features = ["appkit"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
] }
