[package]
name = "finestra"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
dashmap = "5"
euclid = "0.22"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.3", features = ["appkit"] }
objc_id = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System",
    "Win32_System_SystemServices",
    "Win32_UI",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }
